changed getFirst